--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,18 @@ jobs:
           - stable
           - beta
           - nightly
-          - 1.36.0
+          - 1.0.0
+
+      include:
+        - rust: stable
+          features: ""
+        - rust: beta
+          features: ""
+        - rust: nightly
+          features: ""
+        - rust: 1.0.0
+          features: '--features "std"'
+
 
     steps:
       - uses: actions/checkout@v1
@@ -32,13 +43,13 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --verbose
+          args: --verbose ${{ matrix.features }}
       
       - name: test 
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --verbose
+          args: --verbose ${{ matrix.features }}
 
   clippy:
     runs-on: ubuntu-latest
