--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "err_or"
 description = "Small lib that helps converting `Option<E>` into `Result<_, E>`"
 version = "0.1.0"
 authors = ["Waffle <waffle.lapkin@gmail.com>"]
-edition = "2018"
+edition = "2015"
 license-file = "LICENSE"
 repository = "https://github.com/WaffleLapkin/err_or/"
 homepage = "https://github.com/WaffleLapkin/err_or/"
@@ -20,6 +20,10 @@ exclude = [
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+# Used for compatability with rustc<1.7
+std = []
 
 [dependencies]
 # none
